KB's fixes: make get calls by log count back from today, survey details have no callers and end date and wrapping text; added configurable personal inbox and confirm input, and fix callback implementation to limit to 30secs

--- a/trunk/web/gwt/war/Ao.css
+++ b/trunk/web/gwt/war/Ao.css
@@ -193,6 +193,13 @@ html>body .gwt-DecoratedStackPanel .gwt-StackPanelItem-below-selected .stackItem
   text-align: left;
 }
 
+.dialog-NumsText {
+  width: 30em;
+  font-size: 80%;
+  padding: 10px;
+  text-align: left;
+}
+
 .mail-Contacts td, .mail-Tasks td {
   padding: 4px 0 0 0;
 }
